--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       <section class="section-testimonials" id="testimonials">
         <div class="testimonial-container">
           <span class="subheading">Testimonials</span>
-          <h2 class="heading-secondary">Once you try it yoy can't go back</h2>
+          <h2 class="heading-secondary">Once you try it you can't go back</h2>
           <div class="testimonials">
             <figure class="testimonial">
               <img
